fixing video height on Firefox browser

--- a/css/style-home.css
+++ b/css/style-home.css
@@ -133,6 +133,7 @@ body
 
 #page1 {
 	background:#333;
+	height : 100%;
 	z-index : -100;
 }
 
